@@ -1,0 +1,1 @@
+static PersistenceUpdaterSvc "-file info.pr"
