@@ -1,3 +1,11 @@
+Thu Jun 12 20:15:17 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
+
+        * tests/DCPS/PersistentInfoRepo/mySvc.conf:
+        * tests/Utils/Options.h:
+        * tests/Utils/Options.cpp:
+
+          Added missing files to svn.
+
 Thu Jun 12 19:52:51 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * tests/DCPS/PersistentInfoRepo/Publisher.cpp:
